# ChangeLog for dev-python/termcolor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Oct 2010; James Rowe <jnrowe@gmail.com> termcolor-0.2.ebuild:
  Keyworded amd64.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  15 Sep 2010; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  No support for Python 3.

*termcolor-0.2 (15 Sep 2010)

  15 Sep 2010; James Rowe <jnrowe@gmail.com> +termcolor-0.2.ebuild:
  Version bump [#172].

  21 Mar 2010; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  Added PYTHON_DEPEND setting.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  Switched to EAPI 2.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  Set SUPPORT_PYTHON_ABIS [205].

  01 Nov 2009; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  Keyworded x86.

  01 Nov 2009; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  Keyworded amd64.

  14 Oct 2009; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  Switch to using jnrowe-pypi eclass.

  02 Oct 2009; James Rowe <jnrowe@gmail.com> termcolor-0.1.2.ebuild:
  Keyworded ~x86.

*termcolor-0.1.2 (02 Oct 2009)

  02 Oct 2009; James Rowe <jnrowe@gmail.com> +termcolor-0.1.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me. Required by dev-python/pyhistorian.
