@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST termcolor-0.1.2.tar.gz 15096 RMD160 e1fb2250832d7f567447ae49d70151b3d1c1ae5a SHA1 5cfb3f3bcbdc1fb8a0f08322ec3cf6dc139b3a40 SHA256 3f0a975242119827cb581b61ead67242c10b94a2513bb755d5c4e81735bb57d9
 DIST termcolor-0.2.tar.gz 15234 RMD160 b313862b8ad95a01686c345b12e41bf18a5ed4c8 SHA1 33f8d0addf6fbd6347abda5d455c992cb9d1c1df SHA256 24950d228078bc74a342ebbe28f4d735850fe3f84031db0c662d3193a6b405e1
-EBUILD termcolor-0.1.2.ebuild 407 RMD160 b9eb8ba81b7a52b60bc583b7945cdc9755c7c028 SHA1 8edb2a31b9108d550619745cabd5845f9b7069ce SHA256 b237752578edbc38db99dd740395071a203ac049f850df3fcf8293e3e5655c6a
-EBUILD termcolor-0.2.ebuild 380 RMD160 410b98b7ee148f3b7c4ce895c9bc804a3b29a93a SHA1 8dd83607115a131cfdff21c6e757a98cd38244d1 SHA256 6a907077d686cf67aab2fe581b8d0b55660573559ab02a337c8639184a5a0bea
-MISC ChangeLog 1367 RMD160 6d7ae457f8a8722802d6b5022352efcc3f482522 SHA1 4625fb2aed0cf84822f2aab00cb9143604c07eb7 SHA256 bc3ff5758951eec5aad2db87d3233dafbf7bb80a7bc1e2452f7fd15686f99c98
+EBUILD termcolor-0.2.ebuild 379 RMD160 a384f7b86925f0e3706b6da2c51972c130d3e6ea SHA1 8bce8daceea4fe7fec272f542050b440041ef491 SHA256 976bdff4b957d271fc1ead3e08d244586b55e0d335d9c5969e4129d852ba244d
+MISC ChangeLog 1479 RMD160 294992d236b22047a89c0d16d9a2619ebf32b669 SHA1 71f865400aa43cbbb1933cadab4f7a732b8b0221 SHA256 03464c0e6c7c73d6b3ec8eb26fc6dcbcaf861aac47b9594beaa56dc6f841a944
 MISC metadata.xml 584 RMD160 17bc4730959caa0fb989ed5ab4e71d6d0111444e SHA1 5d2cda93480448c2d19ee8c63ec447453d9dc639 SHA256 afc9e70de364a71ef74d0f67220eea1506d229d9cce78a384667a1a9998a159b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAky4sOEACgkQzJrj3cAXR0nMFwCePhhcZ0gOOYu+IaXViAW427cU
-w/QAoKvqY2aeB5YLs+/1NNZefjzldhIM
-=91CS
+iEYEARECAAYFAky4s68ACgkQzJrj3cAXR0nVMwCfX+azXVpHFSl37pUHVbya43cD
+dPMAnieOlBEw69r21VtMnYXSpqiX6HS8
+=3gbd
 -----END PGP SIGNATURE-----
