@@ -12,7 +12,7 @@ DESCRIPTION="ANSI colour formatting for terminals"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND=""
