@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 =dev-lang/python-2*
->=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/t/termcolor/termcolor-0.1.2.tar.gz
-
-http://pypi.python.org/pypi/termcolor/
-GPL-2
-ANSI color formatting for terminals
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare
-
-
-
-
-
