@@ -6,7 +6,7 @@ mirror://pypi/t/termcolor/termcolor-0.2.tar.gz
 http://pypi.python.org/pypi/termcolor/
 GPL-2
 ANSI colour formatting for terminals
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
