@@ -1,4 +1,3 @@
-REM 2010-10-15 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/termcolor-0.2 %a
 REM 2010-10-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/html-1.12 %a
 REM 2010-10-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/html-1.12 %a
 REM 2010-10-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 app-vim/rails-4.3 %a
